refactoring (#56)