@@ -1,4 +1,16 @@
+FROM gradle:7.4.1-jdk17 AS build
+ARG DATABASE_URL
+ENV DATABASE_URL=${DATABASE_URL}
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon
+
 FROM openjdk:15
+ARG DATABASE_URL
+ENV DATABASE_URL=${DATABASE_URL}
 EXPOSE 8080
-ADD build/libs/toby-bot-5.0-SNAPSHOT-all.jar toby-bot-5.0-SNAPSHOT-all.jar
-ENTRYPOINT ["java", "-jar", "/toby-bot-5.0-SNAPSHOT-all.jar"]
+RUN mkdir /app
+
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
